--- a/AdminLTE/Views/ManageUser/Create.cshtml
+++ b/AdminLTE/Views/ManageUser/Create.cshtml
@@ -72,13 +72,27 @@
                                     <span asp-validation-for="UserName" class="text-danger"></span>
                                 </div>
                             </div>
-
-                            <div class="form-group">
-                                <label>Password <span class="text-danger">*</span></label>
-                                <input type="password" name="Password" class="form-control" required />
-                                <span class="text-danger">@ViewData["PasswordError"]</span>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label>Password <span class="text-danger">*</span></label>
+                                    <input type="password" name="Password" class="form-control" required />
+                                    <span class="text-danger">@ViewData["PasswordError"]</span>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label asp-for="RoleId" class="font-weight-bold">Select Role <span class="text-danger">*</span></label>
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text">
+                                                <i class="fas fa-user-tag"></i>
+                                            </span>
+                                        </div>
+                                        <select asp-for="RoleId" class="form-control" asp-items="ViewBag.RoleList">
+                                            <option value="">-- Select Role --</option>
+                                        </select>
+                                    </div>
+                                    <span asp-validation-for="RoleId" class="text-danger"></span>
+                                </div>
                             </div>
-
                             <div class="form-group">
                                 <label>Address</label>
                                 <textarea asp-for="Address" class="form-control"></textarea>
@@ -120,6 +134,8 @@
                                     }
                                 </div>
                             </div>
+                           
+
 
                             <div class="form-group text-center">
                                 <button type="submit" class="btn btn-primary">
