--- a/AdminLTE/Views/ManageUser/Edit.cshtml
+++ b/AdminLTE/Views/ManageUser/Edit.cshtml
@@ -80,11 +80,21 @@
 
                             <!-- DOB & Gender -->
                             <div class="form-row">
-                                <div class="form-group col-md-6">
+                                <div class="form-group col-md-4">
                                     <label><strong>Date of Birth</strong></label>
                                     <input asp-for="DOB" type="date" class="form-control" />
                                 </div>
-                                <div class="form-group col-md-6">
+                                <!-- Role -->
+                                <div class="form-group col-md-4">
+                                    <label asp-for="RoleId" class="font-weight-bold">
+                                        <i class="fas fa-user-tag"></i> Select Role <span class="text-danger">*</span>
+                                    </label>
+                                    <select asp-for="RoleId" class="form-control select2" asp-items="ViewBag.RoleList">
+                                        <option value="">-- Select Role --</option>
+                                    </select>
+                                    <span asp-validation-for="RoleId" class="text-danger"></span>
+                                </div>
+                                <div class="form-group col-md-4">
                                     <label><strong>Gender</strong></label>
                                     <div>
                                         <div class="form-check form-check-inline">
@@ -97,6 +107,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                
                             </div>
 
                             <!-- Hobby -->
@@ -121,6 +132,7 @@
                                 </div>
                             </div>
 
+                           
                             <!-- Buttons -->
                             <div class="form-group text-center mt-4">
                                 <button type="submit" class="btn btn-primary px-4">
