--- a/AdminLTE/Views/ManageUser/Index.cshtml
+++ b/AdminLTE/Views/ManageUser/Index.cshtml
@@ -35,6 +35,7 @@
                                 <th style="display:none">Address</th>
                                 <th>DOB / Gender</th>
                                 <th>Hobby</th>
+                                <th>Role</th>
                                 <th>Actions</th>
                             </tr>
                         </thead>
@@ -63,6 +64,7 @@
                                             @user.Gender
                                         </td>
                                         <td>@(user.Hobby ?? "-")</td>
+                                        <td>@(user.Role?.Name ?? "-")</td>
                                         <td>
                                             <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-sm btn-info text-white">
                                                 <i class="fas fa-edit"></i> Edit
